# failmail

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
failmail/: __init__.py  notifier.py  registry.py
